fixed mobile header alignment

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -76,8 +76,8 @@ header {
 @include media-breakpoint-down(xs) {
 	header {
 		.topline {
-			margin-bottom: 0.1em;
-			margin-top: 0.1em;
+			margin-bottom: 0.5em;
+			margin-top: 0.5em;
 		}
 	}
 }
