--- a/style.css
+++ b/style.css
@@ -2175,7 +2175,7 @@ header ul.nav li span.toggler::before { content: "\f196"; text-decoration: inher
 
 header ul.nav li span.toggler.open::before { content: "\f147"; }
 
-@media (max-width: 543px) { header .topline { margin-bottom: 0.1em; margin-top: 0.1em; } }
+@media (max-width: 543px) { header .topline { margin-bottom: 0.5em; margin-top: 0.5em; } }
 
 aside { margin-bottom: 2em; position: relative; }
 
